plugins {
    id 'application'
    id 'java'
}

description = 'Performance benchmarks for jMonkeyEngine3'

sourceCompatibility = '1.7'
targetCompatibility = '1.7'

tasks.withType(JavaCompile) { // compile-time options:
    options.compilerArgs << '-Xdiags:verbose'
    options.compilerArgs << '-Xlint:unchecked'
    options.deprecation = true
    options.encoding = 'UTF-8'
}

tasks.withType(JavaExec) { // runtime options:
    args = []
    classpath sourceSets.main.runtimeClasspath
    //debug true
    //enableAssertions true
    //jvmArgs '-verbose:gc'
    jvmArgs '-Xbatch'
    //jvmArgs '-Xms512m', '-Xmx512m'
    //jvmArgs '-XX:+PrintCompilation'
    //jvmArgs '-XX:+UseConcMarkSweepGC'
    //jvmArgs '-XX:+UseG1GC', '-XX:MaxGCPauseMillis=10'
}

// select one version of the Engine:
//ext.jmonkeyengineVersion = '3.2.0-stable' // from jCenter
//ext.jmonkeyengineVersion = '3.2.1-stable' // from jCenter
//ext.jmonkeyengineVersion = '3.2.2-stable' // from jCenter
//ext.jmonkeyengineVersion = '3.2.3-stable' // from jCenter
//ext.jmonkeyengineVersion = '3.2.4-stable' // from jCenter
//ext.jmonkeyengineVersion = '3.3.0-alpha1' // from jCenter
//ext.jmonkeyengineVersion = '3.3.0-alpha2' // from jCenter
//ext.jmonkeyengineVersion = '3.3.0-alpha5' // from jCenter
//ext.jmonkeyengineVersion = '3.3.0-beta1' // from jCenter
//ext.jmonkeyengineVersion = '3.3.0-beta2' // from jCenter
//ext.jmonkeyengineVersion = '3.3.0-stable' // from jCenter
ext.jmonkeyengineVersion = '3.3.2-stable' // from jCenter
//ext.jmonkeyengineVersion = '3.4.0-SNAPSHOT' // from mavenLocal

mainClassName = 'banana.TestRunner'
if (!hasProperty('mainClass')) {
    ext.mainClass = mainClassName
}
jar.manifest.attributes('Main-Class': mainClassName)

repositories {
    //mavenLocal()
    maven { url 'https://dl.bintray.com/stephengold/jme3utilities' } // for pre-v1.4 Minie
    maven { url 'https://dl.bintray.com/stephengold/v-hacd' } // for v-hacd-java-bindings
    jcenter()
    maven { url 'https://dl.bintray.com/stephengold/org.jmonkeyengine' } // for jme3-testdata
    flatDir { dirs rootProject.file('lib') }
    //maven { url 'https://jitpack.io' }
}

dependencies {
    // from jcenter (or mavenLocal) repositories:
    implementation 'org.jmonkeyengine:jme3-core:' + jmonkeyengineVersion
    implementation 'org.jmonkeyengine:jme3-desktop:' + jmonkeyengineVersion
    //implementation 'org.jmonkeyengine:jme3-plugins:' + jmonkeyengineVersion
    runtimeOnly 'org.jmonkeyengine:jme3-lwjgl:' + jmonkeyengineVersion

    // from stephengold's bintray repositories:
    runtimeOnly 'org.jmonkeyengine:jme3-testdata:3.1.0-stable'

    // select one physics library:
    implementation 'org.jmonkeyengine:jme3-bullet:' + jmonkeyengineVersion
    //implementation 'org.jmonkeyengine:jme3-jbullet:' + jmonkeyengineVersion
    //implementation 'jme3utilities:Minie:0.5.0'
    //implementation 'jme3utilities:Minie:0.5.1'
    //implementation 'jme3utilities:Minie:0.6.0'
    //implementation 'jme3utilities:Minie:0.6.1'
    //implementation 'jme3utilities:Minie:0.6.2'
    //implementation 'jme3utilities:Minie:0.6.3'
    //implementation 'jme3utilities:Minie:0.6.4'
    //implementation 'jme3utilities:Minie:0.6.5'
    //implementation 'jme3utilities:Minie:0.7.0'
    //implementation 'jme3utilities:Minie:0.7.1'
    //implementation 'jme3utilities:Minie:0.7.2'
    //implementation 'jme3utilities:Minie:0.7.3'
    //implementation 'jme3utilities:Minie:0.7.4'
    //implementation 'jme3utilities:Minie:0.7.5'
    //implementation 'jme3utilities:Minie:0.7.6'
    //implementation 'jme3utilities:Minie:0.7.7'
    //implementation 'jme3utilities:Minie:0.8.0'
    //implementation 'jme3utilities:Minie:0.8.1'
    //implementation 'jme3utilities:Minie:0.9.0'
    //implementation 'jme3utilities:Minie:0.9.1'
    //implementation 'jme3utilities:Minie:0.9.2'
    //implementation 'jme3utilities:Minie:0.9.3'
    //implementation 'jme3utilities:Minie:0.9.4'
    //implementation 'jme3utilities:Minie:0.9.5for32'
    //implementation 'jme3utilities:Minie:0.9.5for33'
    //implementation 'jme3utilities:Minie:0.9.6for32'
    //implementation 'jme3utilities:Minie:0.9.6for33'
    //implementation 'jme3utilities:Minie:0.9.7for32'
    //implementation 'jme3utilities:Minie:0.9.8for33'
    //implementation 'jme3utilities:Minie:0.9.9for32'
    //implementation 'jme3utilities:Minie:0.9.10for32'
    //implementation 'jme3utilities:Minie:0.9.11for32'
    //implementation 'jme3utilities:Minie:0.9.12for32'
    //implementation 'jme3utilities:Minie:0.9.13for32'
    //implementation 'jme3utilities:Minie:0.9.13for33'
    //implementation 'jme3utilities:Minie:0.9.14for32'
    //implementation 'jme3utilities:Minie:0.9.14for33'
    //implementation 'jme3utilities:Minie:0.9.15for32'
    //implementation 'jme3utilities:Minie:0.9.15for33'
    //implementation 'jme3utilities:Minie:1.0.0for32'
    //implementation 'jme3utilities:Minie:1.0.0for33'
    //implementation 'jme3utilities:Minie:1.1.0for32'
    //implementation 'jme3utilities:Minie:1.1.0for33'
    //implementation 'jme3utilities:Minie:1.2.0for32'
    //implementation 'jme3utilities:Minie:1.2.0for33'
    //implementation 'jme3utilities:Minie:1.3.0for32'
    //implementation 'jme3utilities:Minie:1.3.0for33'
    //implementation 'com.github.stephengold:Minie:1.4.0for32'
    //implementation 'com.github.stephengold:Minie:1.4.0for33'
    //implementation 'com.github.stephengold:Minie:1.4.1for32'
    //implementation 'com.github.stephengold:Minie:1.4.1for33'
    //implementation 'com.github.stephengold:Minie:1.5.0for32'
    //implementation 'com.github.stephengold:Minie:1.5.0for33'
    //implementation 'com.github.stephengold:Minie:1.5.0+debugfor33'
    //implementation 'com.github.stephengold:Minie:1.6.0+for32'
    //implementation 'com.github.stephengold:Minie:1.6.0'
    //implementation 'com.github.stephengold:Minie:1.6.1'
    //implementation 'com.github.stephengold:Minie:1.7.0+debug'
    //implementation 'com.github.stephengold:Minie:1.7.0+debugdp'
    //implementation 'com.github.stephengold:Minie:1.7.0+dp'
    //implementation 'com.github.stephengold:Minie:1.7.0'
    //implementation 'com.github.stephengold:Minie:2.0.0-test1'
    //implementation 'com.github.stephengold:Minie:2.0.0-test1+debug'

    // for jme3-bullet ONLY, select one JAR of native libraries from jCenter:
    //runtimeOnly 'org.jmonkeyengine:jme3-bullet-native:3.1.0-stable'
    //runtimeOnly 'org.jmonkeyengine:jme3-bullet-native:3.2.0-stable'
    //runtimeOnly 'org.jmonkeyengine:jme3-bullet-native:3.2.1-stable'
    //runtimeOnly 'org.jmonkeyengine:jme3-bullet-native:3.2.2-stable'
    //runtimeOnly 'org.jmonkeyengine:jme3-bullet-native:3.2.3-stable'
    //runtimeOnly 'org.jmonkeyengine:jme3-bullet-native:3.2.4-stable'
    //runtimeOnly 'org.jmonkeyengine:jme3-bullet-native:3.3.0-alpha1'
    //runtimeOnly 'org.jmonkeyengine:jme3-bullet-native:3.3.0-alpha2'
    //runtimeOnly 'org.jmonkeyengine:jme3-bullet-native:3.3.0-alpha5'
    //runtimeOnly 'org.jmonkeyengine:jme3-bullet-native:3.3.0-beta1'
    //runtimeOnly 'org.jmonkeyengine:jme3-bullet-native:3.3.0-beta2'
    //runtimeOnly 'org.jmonkeyengine:jme3-bullet-native:3.3.0-stable'
    runtimeOnly 'org.jmonkeyengine:jme3-bullet-native:3.3.2-stable'
}

// cleanup tasks
clean.dependsOn('cleanDLLs', 'cleanDyLibs', 'cleanLogs', 'cleanSOs')
task cleanDLLs(type: Delete) {
    delete fileTree(dir: '.', include: '*.dll')
}
task cleanDyLibs(type: Delete) {
    delete fileTree(dir: '.', include: '*.dylib')
}
task cleanLogs(type: Delete) {
    delete fileTree(dir: '.', include: 'hs_err_pid*.log')
}
task cleanSOs(type: Delete) {
    delete fileTree(dir: '.', include: '*.so')
}
